# cd-bookmark

./: Makefile  Makefile.in  README.md  config.status  configure  configure.ac
autom4te.cache/: output.0  output.1  output.3  requests  traces.0  traces.1  traces.2  traces.3
script/: Makefile  Makefile.am  Makefile.in  cdd
src/: Makefile  Makefile.am  Makefile.in  bmquery.c
src/.deps/: bmquery.Po
